
 syntax = "proto3";

 option go_package = "github.com/Sami1309/go-grpc-server/grpc";

 package featureform.embedding.proto;

service EmbeddingHub {
  rpc CreateSpace(CreateSpaceRequest) returns (CreateSpaceResponse) {}
  rpc FreezeSpace(FreezeSpaceRequest) returns (FreezeSpaceResponse) {}
  rpc Set(SetRequest) returns (SetResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc MultiSet(stream MultiSetRequest) returns (MultiSetResponse) {}
  rpc MultiGet(stream MultiGetRequest) returns (stream MultiGetResponse) {}
  rpc NearestNeighbor(NearestNeighborRequest)  returns (NearestNeighborResponse) {}
  rpc Download(DownloadRequest) returns (stream DownloadResponse) {}
  rpc DownloadSpaces(DownloadSpacesRequest) returns (stream DownloadSpacesResponse) {}
}

message CreateSpaceRequest {
  string name = 1;
  uint32 dims = 2;
}

message CreateSpaceResponse {
  // Purposely empty.
}

message FreezeSpaceRequest {
  string name = 1;
}

message FreezeSpaceResponse {
  // Purposely empty.
}

message SetRequest {
  string key = 1;
  Embedding embedding = 2;
  string space = 3;
}

message SetResponse {
  // Purposely empty.
}

message GetRequest {
  string key = 1;
  string space = 2;
}

message GetResponse {
  Embedding embedding = 1;
}

message MultiSetRequest {
  string key = 1;
  Embedding embedding = 2;
  string space = 3;
}

message MultiSetResponse {
  // Purposely empty.
}

message MultiGetRequest {
  string key = 1;
  string space = 2;
}

message MultiGetResponse {
  Embedding embedding = 1;
}

message NearestNeighborRequest {
    int32 num = 1;
    string space = 2;
    string key = 3;
    Embedding embedding = 4;
}

message NearestNeighborResponse {
    repeated string keys = 1;
}

message DownloadRequest {
  string space = 1;
}

message DownloadResponse {
  string key = 1;
  Embedding embedding = 2;
}

message DownloadSpacesRequest {
  // purposely empty.
}

message DownloadSpacesResponse {
  string space = 1;
}

message Embedding {
  repeated float values = 1;
}
